<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quit Smoking</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_id" translatable="false">391386464213</string>
    <string name="title_activity_basarimlar_tab" translatable="false">BasarimlarTab</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">Safak</string>
    <string name="msg_subscribe_failed" translatable="false">Failed to subscribe to weather topic</string>
    <string name="fcm_message" translatable="false">Sigarayı Bırak</string>
    <string name="sure" translatable="false">%1$s %2$s %3$s %4$s %5$s %6$s \n %7$s : %8$s : %9$s</string>
    <string name="question_answernow">Quit Now</string>
    <string name="question_answerlater">Quit Later</string>
    <string name="question_answerearly">I Quit Already</string>
    <string name="questions_answerekek">Male</string>
    <string name="question_answerkadin">Female</string>
    <string name="question_answerdiger">Prefer Not to Answer</string>
    <string name="btn_devam">Continue</string>
    <string name="welcome">Welcome!</string>
    <string name="question_cinsiyet">What is your gender?</string>
    <string name="birakmatarihibos">Quit Date Can\'t Null</string>
    <string name="dogumtarihibos">Birthdate Can\'t Null</string>
    <string name="birhata">Error occur try again</string>
    <string name="question_yas">How old are You?</string>
    <string name="question_birakma">Which one is fit for you?</string>
    <string name="welcome1">We will help you to qiut smoking. For better experience we will ask few questions.</string>
    <string name="welcome2">Hello , Welcome to the &lt;b&gt; Quit Smoking &lt;b&gt; app developed by Cotyora Games</string>
    <string name="btn_save">Save</string>
    <string name="tasarruf_edilen_miktar">Saving Amount</string>
    <string name="icilmeyen_sigara">Cigarettes</string>
    <string name="basarimlar_saglik">Achievements   &amp; Health</string>
    <string name="tasarruf_hedefi_text">Specify new target saving. you can buy cinema ticket or gift to your wife!</string>
    <string name="targets">Targets</string>
    <string name="berbat">Worst</string>
    <string name="kotu">Bad</string>
    <string name="fenadegil">Not Bad</string>
    <string name="iyi">Good</string>
    <string name="sahane">Best</string>
    <string name="nasilsin">Welcome Again! How are you today?</string>
    <string name="geri_kazanilan_omur">Life Regained</string>
    <string name="tahmini_tasarruf">Estimated Savings</string>
    <string name="dsö">"According to the World Health Organization, those who stop smoking can regain 9 years from their lives after quitting. "</string>
    <string name="gunluk">Daily</string>
    <string name="aylik">Monthly</string>
    <string name="yillik">Annual</string>
    <string name="omurluk">Life Time</string>
    <string name="now">Now</string>
    <string name="currency">$</string>
    <string name="duygular">Emotions</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_cik">Exit</string>
    <string name="paketin_fiyatı">Cigarette Pack Price</string>
    <string name="gunde_icilen_sigara">Cigarettes Smoked Daily</string>
    <string name="reklamları_kaldır">Click to Image for remove ads</string>
    <string name="verileri_kaybet">"Welcome, you need to be logged in so you don't lose your data and offer you a personalized experience. "</string>
    <string name="hizmet_gizlilik">I accept the Terms of Service and Privacy Statement</string>
    <string name="gecmis">History</string>
    <string name="anasayfa">Home</string>
    <string name="saglik">Health</string>
    <string name="basarimlar">Achievements</string>
    <string name="ayarlar">Settings</string>
    <string name="ay">Month</string>
    <string name="hafta">Week</string>
    <string name="tarih">Date</string>
    <string name="arzu_siddeti">Craving Intensity</string>
    <string name="biraktim">I Quit</string>
    <string name="birakmadim">I haven\'t quit yet</string>
    <string name="gun">Day</string>
    <string name="bigday">Congratulations %1$s! &lt;br> Your quit smoking day has come! &lt;br> How\'s it going?</string>
    <string name="arzular">Cravings</string>
    <string name="gizlilik">Privacy Policy</string>
    <string name="hizmet">terms of service</string>
    <string name="location_perm">If you want your smoking desires and daily status to be kept by location and date, change the location permission from the settings to when using this application.</string>
    <string name="beyin">Brain</string>
    <string name="ciger">Lung</string>
    <string name="kardiyo">Cardio</string>
    <string name="genel">General</string>
    <string name="gerekli_bilgiler">Fill necessary areas for target</string>
    <string name="bütün_basarimlar">Congrats You Done All Achievements</string>
    <string name="hedefi_bir">You cant change target after setting unless you accomplished</string>
    <string name="hedef">Target</string>
    <string name="hedef_adi">Target Name</string>
    <string name="bu_hedef_icin">%1$d day(s) left for this target</string>
    <string name="hedef_basari_eklendi">Target Added Successfully</string>
    <string name="cok_guclu">Very Strong</string>
    <string name="guclu">Strong</string>
    <string name="orta">Medium</string>
    <string name="az">Weak</string>
    <string name="cok_az">Very Weak</string>
    <string name="yok_">None</string>
    <string name="lutfen_ayarlar">Please First Fill the Areas at Settings Page</string>
    <string name="on_sigara">Did not smoke %1$s cigarettes</string>
    <string name="tebrikler_10">"Congrats You did not smoke %1$s cigars "</string>
    <string name="omrunuzu_uzattiniz">Life regained %1$s %2$s</string>
    <string name="saat">Hour(s)</string>
    <string name="dakika">Minute(s)</string>
    <string name="tebrikler_uzattiniz">Congrats Life regained %1$s %2$s</string>
    <string name="sigarasiz_1">%1$s %2$s without cigar</string>
    <string name="biraktin">You Quit</string>
    <string name="tebrikler_biraktin">Congrats You Quit</string>
    <string name="nabiz">"Your blood pressure, heart rate and the temperature have returned to normal. "</string>
    <string name="parmak_uc">"Your fingertis become warmer and your hands steadier. "</string>
    <string name="kandegerleri">Your blood levels are returning to normal. Your blood have more antioxidants.</string>
    <string name="kalpkrizi">"Heart disease has reduced. Your blood circulation is improving. "</string>
    <string name="kosmak">"Running is now easier! Your chronic cough has disappeared. "</string>
    <string name="gunicinde">"Your cravings reduced "</string>
    <string name="nikotintoleransi">"Your peak nicotine level have dropped "</string>
    <string name="tatvekoku">"Your sens of taste and smell are returning to normal. "</string>
    <string name="butunvucut">"Your entire body is ridding itself of nicotine. "</string>
    <string name="sinirlenmeniz">Anger or irritability, anxiety, depression, impatience,  restlessness, and difficulty concentrating have ended.</string>
    <string name="sigaraictiginiz">You are feel less stressed than you were smoking.</string>
    <string name="sigarayibirakmak">Quitting can be an anxious process. You are past the worst of it.</string>
    <string name="oksijen">"Your oxygen and carbon monoxide levels are back to normal. "</string>
    <string name="dahaenerjik">Your energy levels are increasing! Breathing becomes easier. Your body beginning to relax.</string>
    <string name="akciger">Your lung function is now 40% better.</string>
    <string name="cigerleriniz">"Your body is ridding itself of tar coating and growing new tissue. "</string>
    <string name="tebrikler_gun">"Congrats you are cigar free for %1$s %2$s "</string>
    <string name="daily_shortcut_short_label">Add Cravings</string>
    <string name="daily_shortcut_long_label">Add Cravings</string>
    <string name="daily_disabled_message">Shortcut disabled</string>
</resources>